# dotdot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
dots/zsh/: spec.yaml  zshrc
examples/dots/zsh/: spec.yaml  zprofile
src/dot/: dot.py
src/dotdot/: actions.py  cli.py  dot.py  exceptions.py  pkg.py  spec.py
test/: test_action.py  test_package.py  test_parse.py
test/dots/: pkg2
test/dots/pkg1/: cmd.sh  spec.yaml
test/dots/pkg4_invalid_action/: spec.yaml
test/dots/pkg5_invalid_yaml/: spec.yaml
test/dots/pkg6_variants/: spec.yaml
