[metadata]
name = dot
version = 0.0.1
requires_dist = setuptools

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    pyyaml~=5.4
    GitPython~=3.1.0

[options.packages.find]
where = src
include =
    dotdot
    dotdot.*

[options.entry_points]
console_scripts =
  dotdot = dotdot.cli:main

[yapf]
based_on_style=google
split_before_expression_after_opening_paren=True
split_before_first_argument=True
split_all_comma_separated_values=True
